@@ -1,5 +1,12 @@
 2001-10-21  Akim Demaille  <akim@epita.fr>
 
+	* automake.in (scan_autoconf_traces): Don't recognize AC_SUBSTs
+	for symbols which cannot be Make macro names.
+	(scan_one_autoconf_file): `$here' is new.
+	Use it consistently instead of `1' to remember a token was seen.
+
+2001-10-21  Akim Demaille  <akim@epita.fr>
+
 	* tests/subdircond.test: Requires gettext.
 	* tests/libobj.test, tests/libobj10.test, tests/libobj2.test,
 	* tests/libobj6.test, tests/libobj9.test, tests/libtool.test,
